# colibri

./: .gitignore  Cargo.toml  README.md  TODO.md  colibri.toml  justfile
.github/workflows/: ci.yaml  main.yaml
benches/: README.md  rate_limiter_benchmarks.rs
demo/: README.md  cluster-request-tests.sh  consistency-validation.sh  gossip.sh  hashring.sh  log-filter.sh  quick-validation-demo.sh  rate-limit-validation.sh  single-node-validation.sh  single.sh  timing-validation.sh  validation-utils.sh
examples/: gossip_controller.rs  single_node_demo.rs  transport_demo.rs
src/: api.rs  cli.rs  consistent_hashing.rs  error.rs  lib.rs  main.rs  node.rs  rate_limit.rs  settings.rs  token_bucket.rs  versioned_bucket.rs
src/api/: base.rs  cluster.rs  mod.rs  paths.rs  rate_limits.rs  state.rs
src/cluster/: admin.rs  factory.rs  membership.rs  messages.rs  mod.rs  peer_sender.rs
src/gossip/: gossip_node.rs  messages.rs  mod.rs  node_id.rs  scheduler.rs  transport.rs  vector_clock.rs  versioned_bucket.rs
src/hashring/: hashring_node.rs
src/limiters/: configs.rs  distributed_bucket.rs  epoch_bucket.rs  mod.rs  rate_limit.rs  rules.rs  token_bucket.rs  versioned_bucket.rs
src/node/: commands.rs  controller.rs  messages.rs  mod.rs  node_id.rs  single_node.rs
src/node/cluster/: membership.rs  messages.rs  mod.rs  topology.rs
src/node/gossip/: controller.rs  controller.rs.bak2  gossip_node.rs  messages.rs  mod.rs  scheduler.rs  transport.rs  versioned_bucket.rs
src/node/hashring/: consistent_hashing.rs  controller.rs  controller.rs.bak  hashring_node.rs  hashring_node_broken.rs  messages.rs  mod.rs
src/transport/: common.rs  mod.rs  receiver.rs  socket_pool.rs  socket_pool_tcp.rs  socket_pool_udp.rs  stats.rs  tcp_connection.rs  tcp_receiver.rs  traits.rs  udp_connection.rs  udp_receiver.rs
tests/: admin_tool_integration_tests.rs  cluster_migration_tests.rs  cluster_orchestration_tests.rs  configurable_rate_limits_tests.rs  integration_tests.rs  node_type_compatibility_tests.rs  property_tests.rs  rate_limit_tests.rs  simple_export_import_test.rs  udp_transport_architecture_tests.rs
work-in-progress/: deployment-plan.md
