[package]
name = "colibri"
version = "0.5.0-dev.3"
description = "Distributed rate-limiting as a service"
authors = ["Erik Aker <eraker@gmail.com>"]
homepage = "https://github.com/erewok/colibri"
repository = "https://github.com/erewok/colibri"
edition = "2021"
license = "MPL-2.0"


default-run = "colibri-server"


[[bin]]
name = "colibri-server"
path = "src/main.rs"

[[bin]]
name = "colibri-admin"
path = "src/bin/colibri-admin.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
crdts = "7.3.2"
figment = { version = "0.10.19", features = ["toml"] }
gxhash = "3.4"
hostname = "0.4.2"
indexmap = "2.12.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
papaya = "0.2.3"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.9.2"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
] }
toml = "0.9.8"
tower = { version = "0.5.2", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.6.8", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
thiserror = "2.0.17"
url = "2.5.7"
tracing = "0.1.44"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
# console-subscriber = "0.5.0"
criterion = "0.8.1"
env_logger = "0.11.8"
mock_instant = "0.6.0"
proptest = "1.9.0"
rand = "0.9.2"
tempfile = "3.23.0"
tokio-test = "0.4"
