[package]
name = "colibri"
version = "0.5.0"
description = "Distributed rate-limiting as a service"
authors = ["Erik Aker <eraker@gmail.com>"]
homepage = "https://github.com/erewok/colibri"
repository = "https://github.com/erewok/colibri"
edition = "2021"
license = "MPL-2.0"


default-run = "colibri-server"


[[bin]]
name = "colibri-server"
path = "src/main.rs"

[[bin]]
name = "colibri-admin"
path = "src/bin/colibri-admin.rs"

[[bench]]
name = "rate_limiter_benchmarks"
harness = false

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
crdts = "7.3.2"
figment = { version = "0.10.19", features = ["toml"] }
gxhash = "3.4"
hostname = "0.4.2"
indexmap = {version = "2.13.0", features = ["serde"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
papaya = { version = "0.2.3", features = ["serde"] }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
] }
toml = "0.9.8"
tower = { version = "0.5.3", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.6.8", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
thiserror = "2.0.18"
url = "2.5.8"
tracing = "0.1.44"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
# console-subscriber = "0.5.0"
criterion = "0.8.2"
env_logger = "0.11.9"
mock_instant = "0.6.0"
proptest = "1.10.0"
rand = "0.10.0"
tempfile = "3.26.0"
tokio-test = "0.4.5"
